Tue Feb 24 06:16:22 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb (RDoc::RDoc::document): Now create op dir _before_
	  parsing files.

Tue Feb 24 06:08:47 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::parse_constant): 
	  Start collecting text of constant values earlier: was missing
	  values in output if there was no space after '='

Tue Feb 24 06:08:25 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Escape contant values.

Tue Feb 24 03:45:06 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_config.c (ossl_config_each): add new method
	  OpenSSL::Config#each. it iterates with section name, field name
	  and value.

	* ext/openssl/ossl_config.c (Init_ossl_config): include Enumerable.

Mon Feb 23 09:09:44 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (parse_args): use optparse instead of getopts.

	* instruby.rb (DOSISH): embedded path in batch files should not be
	  prefixed by DESTDIR.  [ruby-core:02186]

Sun Feb 22 14:58:04 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: $extstatic is Array or nil now.  [ruby-talk:93383]

	* Makefile.in, bcc32/Makefile.sub, win32/Makefile.sub: terminate options.

	* lib/mkmf.rb (init_mkmf): $INCFLAGS also should be lazy-evaluated.

Sun Feb 22 13:05:37 2004  akira yamada  <akira@ruby-lang.org>

	* lib/uri/mailto.rb (URI::MailTo::to_s): should include fragment.

Sun Feb 22 12:58:35 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: use optparse instead of getopts.

	* Makefile.in, bcc32/Makefile.sub, win32/Makefile.sub: ditto.

Sat Feb 22 09:51:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* re.c: corrected documentation format (rb_reg_initialize_m)

Sat Feb 21 22:41:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* ext/zlib/zlib.c: documented, but needs more effort.

Sat Feb 21 14:33:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
